# Dynaxis

./: .actrc  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  DOCKER.md  Dockerfile  Dockerfile.base  HANDOFF.md  README.md  conanfile.py  docker-compose.yml  tasks.md  vcpkg.json  verify_chat.py
client_gui/: CMakeLists.txt  README.md
client_gui/src/: gui_manager.cpp  main.cpp  main_entry.cpp  net_client.cpp
devclient/: CMakeLists.txt  README.md
devclient/include/client/: net_client.hpp
devclient/src/: main.cpp  net_client.cpp
devclient/src/app/: app_state.cpp  application.cpp  (+3 more)
gateway/: AGENTS.md  CMakeLists.txt  README.md  gateway_architecture_deep_dive.md
gateway/src/: gateway_app.cpp  gateway_app_access.hpp  gateway_app_state.hpp  gateway_backend_connection.cpp  gateway_backend_connection.hpp  gateway_backend_frame_inspector.cpp  gateway_backend_frame_inspector.hpp  gateway_configuration.cpp  gateway_connection.cpp  gateway_infrastructure_probe.cpp  gateway_lifecycle.cpp  gateway_metrics_text.cpp  gateway_routing_policy.cpp  gateway_tcp_listener.cpp  gateway_udp_ingress.cpp  main.cpp  registry_backend_factory.cpp  session_directory.cpp
infra/: CMakeLists.txt
infra/cmake/: infra_redis_factoryConfig.cmake.in  server_storage_redis_factoryConfig.cmake.in
load_balancer/: CMakeLists.txt  README.md
load_balancer/src/: load_balancer_app.cpp  main.cpp  session_directory.cpp
proto/: CMakeLists.txt  auth.proto  chat.proto  gateway_lb.proto  presence.proto  wire.proto
server/: AGENTS.md  CMakeLists.txt  README.md  server_architecture_deep_dive.md  server_write_behind_deep_dive.md
server/cmake/: server_storage_pg_factoryConfig.cmake.in  server_storage_redis_factoryConfig.cmake.in
server/plugins/: chat_hook_sample.cpp  chat_hook_tag.cpp
server/protocol/: game_opcodes.json
server/scripts/: admin_commands.lua  on_join_policy.lua  on_login_welcome.lua  on_login_welcome.script.json
server/src/: main.cpp
tests/: AGENTS.md  CMakeLists.txt  chat_history_tests.cpp  db_worker_pool_tests.cpp  gateway_session_directory_tests.cpp  job_thread_manager_tests.cpp  state_instance_registry_tests.cpp  task_scheduler_tests.cpp  test_storage_basic.cpp
tests/contracts/: CMakeLists.txt  server_chat_service_headers_compile.cpp
tests/core/: CMakeLists.txt  fps_compat_smoke.cpp  plugin_runtime_invalid.cpp  plugin_runtime_v1.cpp  plugin_runtime_v2.cpp  plugin_test_api.hpp  plugin_test_helpers.hpp  public_api_extensibility_smoke.cpp  public_api_fps_capability_smoke.cpp  public_api_headers_compile.cpp  public_api_realtime_capability_smoke.cpp  public_api_smoke.cpp  public_api_stable_header_scenarios.cpp  public_api_worlds_aws_smoke.cpp  run_installed_factory_package_consumer.cmake  run_installed_package_consumer.cmake  test_app_host_lifecycle.cpp  test_core_memory.cpp  test_core_metrics.cpp  test_core_net.cpp  test_core_paths.cpp  test_core_util.cpp  test_direct_bind_contract.cpp  test_direct_egress_route.cpp  test_engine_composition.cpp  test_gateway_resilience_controls.cpp  test_lua_runtime.cpp  test_mmorpg_compat_headers.cpp  test_mmorpg_migration.cpp  test_mmorpg_topology.cpp  test_mmorpg_world_drain.cpp  test_mmorpg_world_transfer.cpp  test_plugin_chain_host.cpp  test_plugin_host.cpp  test_rudp_engine.cpp  test_rudp_rollout_policy.cpp  test_script_watcher.cpp  test_security_compression.cpp  test_shared_library.cpp  test_udp_bind_abuse_guard.cpp  (+3 more)
tests/gateway/: CMakeLists.txt
tests/policy/: CMakeLists.txt
tests/python/: capture_phase5_evidence.py  capture_worlds_kubernetes_kind_evidence.py  run_stack_test.py  session_continuity_common.py  stack_topology.py  summarize_conan_strategy_probe.py  summarize_windows_sccache_poc.py  test_capture_phase5_evidence.py  test_check_doxygen_coverage.py  test_ci_workflow_contracts.py  test_deploy_docker_build_plan.py  test_gateway_public_header_contracts.py  test_package_consumer_contracts.py  test_run_stack_test.py  test_verify_plugin_script_matrix.py  test_verify_windows_release_tree_ready.py  test_windows_test_rework_contracts.py  test_windows_validation_layout.py  verify_admin_api.py  verify_admin_auth.py  verify_admin_control_plane_e2e.py  verify_admin_read_only.py  verify_chat.py  verify_continuity_recovery_matrix.py  verify_fps_netem_rehearsal.py  verify_fps_rudp_transport.py  verify_fps_rudp_transport_matrix.py  verify_fps_state_transport.py  verify_mmorpg_runtime_matrix.py  verify_plugin_hot_reload.py  verify_plugin_rollback.py  verify_plugin_script_matrix.py  verify_plugin_v2_fallback.py  verify_pong.py  verify_script_fallback_switch.py  verify_script_hot_reload.py  verify_session_continuity_restart.py  verify_stack_topology_generator.py  verify_whisper_cross_instance.py  verify_windows_release_tree_ready.py  (+15 more)
tests/server/: CMakeLists.txt  chat_hook_throwing.cpp  test_chat_lua_bindings.cpp  test_chat_plugin_chain.cpp  test_chat_plugin_chain_v2.cpp  test_fps_runtime.cpp  test_hook_auto_disable.cpp  test_lua_hook_integration.cpp  test_server_chat.cpp  test_server_config.cpp
tools/: AGENTS.md  CMakeLists.txt  README.md  check_core_api_contracts.py  check_doxygen_coverage.py  check_markdown_links.py  ext_inventory.py  gen_opcode_docs.py  gen_opcodes.py  gen_wire_codec.py  new_plugin.py  new_script.py
tools/admin_app/: README.md  admin_ui.html  main.cpp  redis_client_factory.cpp  redis_client_factory.hpp
tools/loadgen/: README.md  main.cpp  report_writer.cpp  report_writer.hpp  scenario_loader.cpp  scenario_loader.hpp  scenario_runner.cpp  scenario_runner.hpp  scenario_types.hpp  session_client.cpp  session_client.hpp
tools/migrations/: 0001_init.sql  0001_schema.sql  0007_users_last_login.sql  README.md  runner.cpp
tools/provisioning/: 02_init_db.sql  README.md  simple_init.sql
tools/wb_check/: README.md  main.cpp
tools/wb_common/: redis_client_factory.cpp  redis_client_factory.hpp
tools/wb_dlq_replayer/: README.md  main.cpp
tools/wb_emit/: README.md  main.cpp
tools/wb_worker/: README.md  main.cpp  redis_client_factory.cpp  redis_client_factory.hpp
(+473 files in other folders)
